<resources>
    <string name="app_name">Sites Interessantes</string>
    <string name="novo_site">Novo Site</string>
    <string name="nova_categoria">Nova Categoria</string>
    <string name="tv_nome_categoria">Nome Categoria</string>
    <string name="title_activity_novo_site">Novo site</string>
    <string name="url">Endereço</string>
    <string name="hint_novo_site">Digite a URL do novo site aqui!</string>
    <string name="hint_nova_categoria">Digite o nome da nova categoria aqui!</string>
    <string name="ok">OK</string>
    <string name="favorito">Favorito</string>
    <string name="title_activity_sites_interessantes">Sites Interessantes</string>
</resources>
