<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifspsaocarlos.sdm.sitesinteressantes.NovoSiteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url" />

    <EditText
        android:id="@+id/et_novo_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_novo_site" />

    <CheckBox
        android:id="@+id/cb_favorito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorito" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/ok" />
</LinearLayout>