<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nova_categoria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nome_categoria" />

    <EditText
        android:id="@+id/et_nova_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nova_categoria" />

    <Button
        android:id="@+id/bt_ok_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/ok" />

</LinearLayout>
